intial-setup-angular

--- a/angular.json
+++ b/angular.json
@@ -28,7 +28,7 @@
 							"src/assets"
 						],
 						"styles": [
-							"assets/styles/styles.scss"
+							"src/assets/styles/styles.scss"
 						],
 						"scripts": []
 					},
